# Oz

./: .gitignore  README.md  build-android.sh  privacy-policy.html  settings.gradle.kts
CMake/cmake-3.18.1/: CMakeCPackOptions.cmake  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestScript.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
CMake/cmake-3.18.1/Auxiliary/: CTestTestfile.cmake  Makefile  cmake_install.cmake
CMake/cmake-3.18.1/Bootstrap.cmk/: InitialCacheFlags.cmake  Makefile  cmConfigure.h  cmVersionConfig.h
CMake/cmake-3.18.1/Source/: CTestTestfile.cmake  Makefile  cmVersionConfig.h  cmake_install.cmake
CMake/cmake-3.18.1/Tests/: CMakeBuildDoubleProjectTest.cmake  CMakeBuildTest.cmake  CTestTestfile.cmake  CTestUpdateGIT.cmake  EnforceConfig.cmake  Makefile  cmake_install.cmake
CMake/cmake-3.18.1/Utilities/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Oz/: pyvenv.cfg
android/: build.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/gradle/: libs.versions.toml
app/: build.gradle.kts
cmake-3.18.1/: CMakeCPackOptions.cmake  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestScript.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
cmake-3.18.1/Auxiliary/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake-3.18.1/Bootstrap.cmk/: InitialCacheFlags.cmake  Makefile  cmConfigure.h
cmake-3.18.1/Source/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake-3.18.1/Tests/: CMakeBuildDoubleProjectTest.cmake  CMakeBuildTest.cmake  CTestTestfile.cmake  CTestUpdateGIT.cmake  EnforceConfig.cmake  Makefile  cmake_install.cmake
cmake-3.18.1/Utilities/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gradle/wrapper/: gradle-wrapper.properties
rust/audio_engine/: Cargo.toml
(+405 files in other folders)
